# modbioterp-enveda

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
enzyme_ml/: __init__.py
notebooks/: 01-extract-sequence.ipynb  01-pdb-files.ipynb  01-working-with-biopandas.ipynb  02-AAC.ipynb  02-fix-sequence.ipynb  03-aac.ipynb  1_mod-bio-terp copy.ipynb  1_mod-bio-terp.ipynb  best_model.pth  part_03.ipynb
notebooks/part-01/: 01-extract-sequence.ipynb  02-fix-sequence.ipynb  03-aac.ipynb  04-dc.ipynb  05-proteins-features.ipynb  06-energies.ipynb  07-3d-descriptors.ipynb  08-descriptor-distribution.ipynb  08-end.ipynb
notebooks/part-02/: 0-start.ipynb  1-feature-label-comparison.ipynb  1-load_data.ipynb  1-train-test-split.ipynb  2-standard-scaling.ipynb  2-train-test-split-normalization.ipynb  3-model-fitting-and-evaluation.ipynb
workshop_data/: cotb2_mg.fasta
workshop_data/cotb2_ml_data/: lig_1_energy.txt
workshop_data/proteins/: 6loo.fasta  cotb2_mg.fasta  cotb2_pp_mg.fasta
